css overflow closer fix but not complete

--- a/frontend/src/components/UserMainPage/index.css
+++ b/frontend/src/components/UserMainPage/index.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     position: absolute;
     background-color: #F4EADE;
-    height: 100%;
+    min-height: 100vh;
     width: 85%;
 }
 
@@ -19,6 +19,7 @@
     justify-content: space-between;
     flex-direction: column;
     min-height: 100vh;
+    
     
     width: 400px;
     background-color: #2F496E;
